# tao

./: .editorconfig  .gitignore  AGENTS.md  AUDIT.md  Cargo.toml  PLAN.md  biome.json  commitlint.config.js  config.toml  lint-staged.config.js  package.json  progress.md  run-state.json  tickets.csv
.github/workflows/: audit.yml  rust-ci.yml  swift-ci.yml  swift-release-artifact.yml
apps/obs-macos/: Package.swift  README.md
apps/tao-macos/: Package.swift  README.md
bench/fixtures/: README.md
bench/reports/: perf-001-bridge-1k.json  perf-002-bridge-5k.json  perf-003-bridge-10k-time.txt  perf-003-bridge-10k.json  perf-003-startup-smoke-time.txt  perf-003-startup-smoke.json  perf-005-resolve-baseline.json  perf-005-resolve-comparison.json  perf-005-resolve-optimized.json  perf-006-bridge-call-batching.json  perf-007-startup-1k-time.txt  perf-007-startup-1k.json
crates/obs-bench/: Cargo.toml
crates/obs-bench/src/: main.rs
crates/obs-cli/: Cargo.toml  README.md
crates/obs-cli/src/: main.rs
crates/obs-sdk-bases/: Cargo.toml  README.md
crates/obs-sdk-bases/src/: lib.rs
crates/obs-sdk-bridge/: Cargo.toml  README.md
crates/obs-sdk-bridge/src/: lib.rs  main.rs
crates/obs-sdk-core/: Cargo.toml  README.md
crates/obs-sdk-links/: Cargo.toml  README.md
crates/obs-sdk-markdown/: Cargo.toml  README.md
crates/obs-sdk-properties/: Cargo.toml  README.md
crates/obs-sdk-search/: Cargo.toml  README.md
crates/obs-sdk-service/: Cargo.toml  README.md
crates/obs-sdk-service/src/: config.rs  feature_flags.rs  import_export.rs  indexing.rs  lib.rs
crates/obs-sdk-service/tests/: conformance_harness.rs
crates/obs-sdk-storage/: Cargo.toml  README.md
crates/obs-sdk-storage/src/: bases.rs  files.rs  index_state.rs  lib.rs  links.rs  transaction.rs
crates/obs-sdk-vault/: Cargo.toml  README.md
crates/obs-sdk-vault/src/: fingerprint.rs  lib.rs  path.rs
crates/obs-sdk-watch/: Cargo.toml  README.md
crates/obs-tui/: Cargo.toml  README.md
crates/obs-tui/src/: main.rs
crates/tao-bench/: Cargo.toml  README.md
crates/tao-bench/src/: main.rs
crates/tao-cli/: Cargo.toml  README.md
crates/tao-cli/src/: cli_impl.rs  main.rs
crates/tao-cli/src/cli_impl/: args.rs  contract.rs  daemon.rs  helpers.rs  query_docs.rs  registry.rs  runtime.rs  tests.rs
crates/tao-cli/src/cli_impl/commands/: base.rs  doc.rs  graph.rs  health.rs  meta.rs  mod.rs  query.rs  task.rs  tools.rs  vault.rs
crates/tao-sdk-bases/: Cargo.toml  README.md
crates/tao-sdk-bridge/: Cargo.toml  README.md
crates/tao-sdk-bridge/src/: lib.rs  main.rs  runtime.rs
crates/tao-sdk-config/: Cargo.toml  README.md
crates/tao-sdk-config/src/: lib.rs
crates/tao-sdk-core/: Cargo.toml  README.md
crates/tao-sdk-links/: Cargo.toml  README.md
crates/tao-sdk-links/src/: lib.rs
crates/tao-sdk-markdown/: Cargo.toml  README.md
crates/tao-sdk-properties/: Cargo.toml  README.md
crates/tao-sdk-search/: Cargo.toml  README.md
crates/tao-sdk-search/src/: adapters.rs  execution.rs  lib.rs  logical_plan.rs  optimizer.rs  parser.rs  physical_plan.rs
crates/tao-sdk-service/: Cargo.toml  README.md
crates/tao-sdk-service/src/: base_executor.rs  config.rs  feature_flags.rs  graph.rs  health.rs  import_export.rs  indexing.rs  ingest.rs  legacy.rs  lib.rs  note_crud.rs  property_query.rs  property_update.rs  reconcile.rs  service_tests.rs  tracing_hooks.rs  transactions.rs
crates/tao-sdk-service/src/base_executor/: cache.rs  persistence.rs  validation.rs
crates/tao-sdk-service/src/indexing/: pipeline.rs
crates/tao-sdk-service/src/indexing/pipeline/: checkpoint.rs  consistency.rs  errors.rs  full.rs  incremental.rs  reconcile_scan.rs  self_heal.rs  tests.rs
crates/tao-sdk-service/tests/: conformance_harness.rs
crates/tao-sdk-storage/: Cargo.toml  README.md
crates/tao-sdk-vault/: Cargo.toml  README.md
crates/tao-sdk-vault/src/: lib.rs  path.rs  scan.rs
crates/tao-sdk-watch/: Cargo.toml  README.md
crates/tao-sdk-watch/src/: lib.rs
crates/tao-tui/: Cargo.toml  README.md
crates/tao-tui/src/: main.rs
docs/adr/: README.md
docs/architecture/: bridge-dto-contracts.md  index-event-model.md  link-resolver-policy.md  migration-versioning-strategy.md  swift-app-boundaries.md  workspace-boundaries.md
docs/db/: migration-runbook.md  sqlite-pragma-profile.md
docs/product/: scope-v1.md
docs/release/: release-runbook.md  v1.0.0-rc.1.md  versioning-policy.md
docs/specs/: cli-ia-rfc.md  error-codes.md  obsidian-compatibility-matrix.md  parity-scope.md  perf-phase23.md  performance-budgets.md  query-language.md  sdk-api-surface.md  synthetic-fixtures.md
plan/: PLAN.md  README.md  architecture-map.md  perf-budgets.json  progress.md  release-notes-tao.md  rename-manifest.md  run-state.json  tickets.csv  tickets.json  tickets.md
plan/checklists/: execution.md  review.md
plan/templates/: crate-readme-template.md  ticket-template.md
plan/tickets/: base-001-split-base-parser-into-ast-and-evaluator-modules.md  base-002-implement-strict-typed-coercion-for-base-fields.md  base-003-add-complete-base-filter-operator-set.md  base-004-implement-stable-sorting-with-null-ordering.md  base-005-add-grouping-and-aggregate-projections.md  base-006-implement-relation-field-resolution.md  base-007-add-rollup-groundwork-over-relation-fields.md  base-008-add-base-schema-introspection-command.md  base-009-unify-base-execution-under-query-planner.md  base-010-add-base-parity-benchmark-suite.md  cli-001-remove-legacy-alias-command-paths.md  cli-002-standardize-structured-error-codes-across-cli.md  cli-003-modularize-cli-command-wiring.md  cli-004-harden-daemon-socket-lifecycle-and-stale-recovery.md  cli-005-expand-cli-contract-test-matrix.md  data-001-expand-synthetic-vault-realism-profile-definitions.md  data-002-integrate-fixture-validator-as-strict-default.md  (+33 more)
scripts/: bench.sh  budgets.sh  check-perf-budgets.sh  clean.sh  ffi.sh  fixtures.sh  generate-fixtures.sh  package-macos-app.sh  release-package-cli.sh  release.sh  release_mac.sh  safety.sh  validate_fixtures.sh
vault/: README.md
vault/docs/: apple.md
(+177 files in other folders)
