[workspace]
resolver = "3"
members = [
  "crates/tao-sdk-core",
  "crates/tao-sdk-vault",
  "crates/tao-sdk-markdown",
  "crates/tao-sdk-links",
  "crates/tao-sdk-properties",
  "crates/tao-sdk-bases",
  "crates/tao-sdk-storage",
  "crates/tao-sdk-search",
  "crates/tao-sdk-watch",
  "crates/tao-sdk-service",
  "crates/tao-sdk-bridge",
  "crates/tao-cli",
  "crates/tao-tui",
  "crates/tao-bench",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "8.2.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
blake3 = "1.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
