[package]
name = "obs-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "obs-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
obs-sdk-bridge = { path = "../obs-sdk-bridge" }
obs-sdk-links = { path = "../obs-sdk-links" }
serde_json.workspace = true
tempfile = "3.17.1"
