[package]
name = "obs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "obs"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
obs-sdk-bridge = { path = "../obs-sdk-bridge" }
obs-sdk-storage = { path = "../obs-sdk-storage" }
obs-sdk-service = { path = "../obs-sdk-service" }
obs-sdk-vault = { path = "../obs-sdk-vault" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
