[package]
name = "obs-sdk-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
obs-sdk-markdown = { path = "../obs-sdk-markdown" }
obs-sdk-service = { path = "../obs-sdk-service" }
obs-sdk-storage = { path = "../obs-sdk-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
clap.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
