[package]
name = "obs-sdk-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
obs-sdk-core = { path = "../obs-sdk-core" }
obs-sdk-markdown = { path = "../obs-sdk-markdown" }
obs-sdk-storage = { path = "../obs-sdk-storage" }
obs-sdk-vault = { path = "../obs-sdk-vault" }
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
