[package]
name = "obs-sdk-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.17.1"
