[package]
name = "obs-sdk-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
