[package]
name = "obs-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "obs-tui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.29.0"
obs-sdk-bridge = { path = "../obs-sdk-bridge" }
ratatui = "0.29.0"

[dev-dependencies]
tempfile = "3.26.0"
