[package]
name = "tao-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tao-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
tao-sdk-bridge = { path = "../tao-sdk-bridge" }
tao-sdk-links = { path = "../tao-sdk-links" }
tao-sdk-search = { path = "../tao-sdk-search" }
tao-sdk-service = { path = "../tao-sdk-service" }
serde_json.workspace = true
serde.workspace = true
tempfile = "3.17.1"
