[package]
name = "tao-sdk-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
tao-sdk-bases = { path = "../tao-sdk-bases" }
tao-sdk-markdown = { path = "../tao-sdk-markdown" }
tao-sdk-service = { path = "../tao-sdk-service" }
tao-sdk-storage = { path = "../tao-sdk-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
clap.workspace = true
blake3.workspace = true
uniffi = { version = "0.29.4", features = ["cli"] }

[dev-dependencies]
tempfile = "3.23.0"
