[package]
name = "tao-sdk-links"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
pulldown-cmark = "0.13.0"
tao-sdk-core = { path = "../tao-sdk-core" }
thiserror.workspace = true
