[package]
name = "tao-sdk-search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
tao-sdk-core = { path = "../tao-sdk-core" }
tao-sdk-storage = { path = "../tao-sdk-storage" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tao-sdk-service = { path = "../tao-sdk-service" }
tao-sdk-vault = { path = "../tao-sdk-vault" }
tempfile = "3.23.0"
