[package]
name = "tao-sdk-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
blake3.workspace = true
rayon.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
