[package]
name = "tao-sdk-watch"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
notify.workspace = true
tao-sdk-service = { path = "../tao-sdk-service" }
tao-sdk-vault = { path = "../tao-sdk-vault" }
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tao-sdk-storage = { path = "../tao-sdk-storage" }
tempfile = "3.23.0"
